<resources>
    <string name="app_name">EWallet</string>
    <string name="copyright">2020. All rights reserved.</string>
    <string name="signin">Login</string>
    <string name="username_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="login">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="resetpassword">Reset Password</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="createaccount">Create an account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="conf_password">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="alreadymember">Already Member ?</string>
    <string name="dashboard">Dashboard</string>
    <string name="history">History</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="wallets">Wallets</string>
    <string name="my_account">My Account</string>
    <string name="all_wallets">All wallets</string>
    <string name="total_balance">Total Balance</string>
    <string name="income">Income</string>
    <string name="spending">Spending</string>
    <string name="new_wallet">Add New Wallet</string>
    <string name="this_week">This week</string>
    <string name="last_7days">Last 7 days</string>
    <string name="visa">Visa</string>
    <string name="show_chart">Show Chart</string>
    <string name="hide_chart">Hide Chart</string>
    <string name="wallet_edit">Wallet Edit</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_type">Wallet Type</string>
    <string name="bank_card">Bank Card</string>
    <string name="mastercard">Mastercard</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="name_oncard">Name on Card</string>
    <string name="will_smith">Will Smith</string>
    <string name="country_registration">Country of Registration</string>
    <string name="united_states">United States</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">City</string>
    <string name="san_francisco">San Francisco</string>
    <string name="state">State</string>
    <string name="address">Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="my_transactions">My Transactions</string>
    <string name="all_transactions">All</string>
    <string name="cancel">Cancel</string>

</resources>